# goit-pyweb-hw-07

./: .dockerignore  alembic.ini  compose.yaml  connect_db.py  models.py  my_select.py  pyproject.toml  school.db  seeds.py
alembic/versions/: 0c3213c6d4df_init.py  608a6b117580_init.py  7c06aa2f933e_init.py  de493c31e16e_init.py
scripts/: build.bat
