[project]
name = "goit-pyweb-hw-07"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.14.0,<2.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "faker (>=33.3.1,<34.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
